--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser =remote-chrome
+browser =chrome
 web.table.url=https://web-table-2.cydeo.com/login
 web.table.username=Test
 web.table.pw=Tester
@@ -9,3 +9,4 @@ percentage.url=https://percentagecalculator.net/
 cloudtables.url=https://editor.datatables.net
 
 INPSurl=https://www.inps.it/it/it.html
+INPSURL.IN.LAVORAZIONE=https://publish-p41554-e573461.adobeaemcloud.com/it/it.html
