--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>cydeo-cucucmber-junit</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
+    <artifactId>cydeo-cucucmber-junit</artifactId>   <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+</properties>
 
 
 
@@ -30,7 +27,7 @@
                     <perCoreThreadCount>false</perCoreThreadCount>
                     <testFailureIgnore>true</testFailureIgnore>
                     <includes>
-                        <include>**/CukesRunner*.java</include>
+                        <include>**/TestRunner*.java</include>
                     </includes>
                 </configuration>
             </plugin>
@@ -88,6 +85,9 @@
         </dependency>
 
     </dependencies>
+
+
+    <version>1.0-SNAPSHOT</version>
 
 
 
